Improved ThingHandlerService registrations / removals
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>